fix: warning near publish button was squished

--- a/css/venue-check.scss
+++ b/css/venue-check.scss
@@ -148,6 +148,8 @@ body.venuecheck-update #venuecheck-conflicts-button {
 }
 
 #venuecheck-modified-publish.notice {
+	box-sizing: border-box;
+	width: 100%;
 	margin: 10px 0 0 0;
 }
 
